--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <nav class="navbar">
                 <div class="logo"><a href="#">Berkay Karakülah</a></div>
                 <ul class="nav-links">
-                    <li class="nav-link"><a href="#">Anasayfa</a></li>
+                    <li class="nav-link"><a href="#">Home</a></li>
                     <li class="nav-link"><a href="#">GitHub</a></li>
-                    <li class="nav-link"><a href="#">Hakkımda</a></li>
+                    <li class="nav-link"><a href="#">About Me</a></li>
                 </ul>
             </nav>
             <div class="content">
